--- a/PAGES/01a_installation/index.html
+++ b/PAGES/01a_installation/index.html
@@ -2776,8 +2776,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>In the upcoming sections, we&#39;ll cover the essential steps to install and run Julia. Additionally, we&#39;ll provide instructions on how to set up VS Code. Its integrated environment will enable you to write and execute Julia code, visualize results, and leverage artificial intelligence tools like GitHub Copilot.</p>
-<p>This section in particular focuses on the installation process. Additionally, we provide valuable resources to further your knowledge of the language. </p>
+<p>In the upcoming sections, we&#39;ll cover the essential steps to install Julia and VS Code. The latter is a code editor that enables you to write and execute code in multiple languages, visualize results, and leverage extensions that simplify the coding experience. We&#39;ll additionally provide some valuable online resources for Julia&#39;s users.</p>
 <p>      </div>
     </div>
   </div>
@@ -2794,16 +2793,18 @@ color: white;
     </div>
   </div>
 </section>
-<section id="installing_an_editor" class="scrollspy">
+<section id="installing_vs_code" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Installing an Editor</h2></p>
+        <h2>Installing VS Code</h2></p>
 <p>Once Julia is installed, you&#39;ll need an editor to write scripts and view outputs. There are numerous alternatives in this respect. <strong>Our website supposes that you use</strong> <a href="https://code.visualstudio.com/"><strong>Visual Studio Code</strong></a> <strong>(aka VS Code)</strong>, which is free, officially supported by Julia, and runs on any operating system &#40;i.e., Windows, macOS, and Linux&#41;. One of the key benefits of VS Code also is the possibility of installing plugins to extend the editor&#39;s capabilities. In fact, you&#39;ll need to add the  <em>Julia Language Support</em> plugin for running Julia.</p>
 <p>Links to other popular editors can be found on <a href="/julia_book/links/">Useful Links</a>, including Vim, Emacs, NotePad, and Sublime. These editors are officially supported by Julia &#40;except Sublime&#41;. I strongly recommend getting proficient in either VS Code or one of these alternatives. This will allow you <strong>to master a single tool for coding in multiple programming languages</strong>.</p>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content>     Avoid getting used to specialized editors built for one particular language, such as RStudio for R &#40;or its newer version <a href=" https://posit.co/"> Posit</a>&#41;. The editors I mentioned were designed for coding, regardless of the programming language you choose. Mastering a general code editor will enhance your coding skills—you&#39;ll be able to apply the same tools and keyboard shortcuts to every language you work with.  </div>  </div>
+ <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
+      <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Privacy Alternative for VS Code</strong>  </span>  </div>  <div class=content>     VS Code is open-source software created and maintained by Microsoft. If you want a more privacy alternative that disables telemetry and tracking, you can install <a href="https://vscodium.com/">VS Codium</a>. This is a re-built of VS Code with exactly the same functionalities.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2858,7 +2859,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
@@ -3470,7 +3471,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#installing_an_editor" data-offset="-40">Installing an Editor</a>
+          <a href="#installing_vs_code" data-offset="-40">Installing VS Code</a>
         </li>
         
         <li>
