--- a/PAGES/01c_vscode/index.html
+++ b/PAGES/01c_vscode/index.html
@@ -2776,7 +2776,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Features and Keyboard Shortcuts</h2></p>
-<p>We present a few handy features and keyboard shortcuts for <a href="https://code.visualstudio.com/">VS Code</a>. Remarkably, several of them can be used regardless of the programming language you&#39;re running. </p>
+<p>We present a few handy features and keyboard shortcuts for <a href="https://code.visualstudio.com/">VS Code</a>, and its privacy-focused alternative <a href="https://vscodium.com/">VS Codium</a>. Remarkably, several of them can be used regardless of the programming language you&#39;re running. </p>
 <p>Each feature discussed includes a gif for a visual illustration. Simply click &quot;Example&quot; to see them in action, or alternatively press  <kbd> Alt+🠙</kbd> or  <kbd> Alt+🠛</kbd> to open and close all of them simultaneously.</p>
 <div class="vscode_bullets"><p> <h4> To run a script </h4>  Select the script to be executed and press  <kbd> Ctrl+Enter</kbd>  <div> <details><summary> Example  </summary>
     <p> <img style="width:60%;height:60%;max-width:100%;" src="/julia_book/assets/PAGES/01c_vscode/pics/ex09.gif"/>
@@ -2835,7 +2835,7 @@ color: white;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
