--- a/PAGES/01d_tips/index.html
+++ b/PAGES/01d_tips/index.html
@@ -2776,7 +2776,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Remarks</h2></p>
-<p>We start by reviewing various suggestions to write code. They represent a minimum set of good practices and apply regardless of the programming language you&#39;re using. By adhering to these guidelines, you&#39;ll be able to write clear and maintainable code. I suggest incorporating these suggestions into your workflow from the very beginning, as it&#39;ll turn the learning process smoother.</p>
+<p>We start by reviewing various suggestions to write code. They represent a minimum set of good practices and apply regardless of the programming language used. By adhering to these guidelines, you&#39;ll be able to write clear and maintainable code. I suggest incorporating these suggestions into your workflow from the very beginning, as it&#39;ll turn the learning process smoother.</p>
 <p>Several of the suggestions we present might seem inconsequential to you at this point, or give the impression that their importance is exaggerated. For small projects, there&#39;s some truth to this—they won&#39;t have a substantial impact.  However, as projects grow in size and complexity, following these principles becomes crucial. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For real-world examples, read the section &quot;Brief Story&quot; of this <a href="https://blog.unosquare.com/10-tips-for-writing-cleaner-code-in-any-programming-language">link</a> or <a href="https://news.ycombinator.com/item?id&#61;18442941">the perspective of a former worker from Oracle</a>.  </span></span>  It&#39;s not uncommon for developers to revisit their own code after a few months &#40;or days&#33;&#41; and struggle to understand it. When this occurs, extending the code becomes a daunting task, often resulting in non-reusable code.</p>
 <p>As usual, the devil is in the details. Thus, the challenge lies in interpreting and implementing these suggestions effectively. Many of them rely on the reader&#39;s judgment, as they require a subjective assessment of when and how to apply them. For example, one suggestion we&#39;ll present is to use clear and descriptive names. However, determining what constitutes &quot;clear&quot; or &quot;unclear&quot; is ultimately a matter of personal interpretation. Hopefully, the implementation of the suggestions will become apparent as we move forward and apply these concepts.</p>
 <p>      </div>
@@ -2803,7 +2803,7 @@ color: white;
 <p>Avoiding abbreviations has the additional benefit of making it easier to substitute expressions. For instance, suppose you name a variable <code>re</code>, and later decide to replace it with a different name. Then, the substitution process becomes more challenging, as the search will also capture functions like <code>replace</code> and <code>repeat</code>.</p>
 <p>Finally, using descriptive names reduces the need for comments. If the code is self-explanatory, comments become only necessary for exceptionally complex code or clarifications that go beyond what&#39;s written. </p>
  <h4> Indent and Align your Code </h4>
-<p>The implementation details of this suggestion has already been covered in the <a href="/julia_book/PAGES/1c_vscode/#keyboard_shortcuts">previous section</a>. For further details, please refer to that section.</p>
+<p>The implementation details of this suggestion has already been covered in the <a href="/julia_book/PAGES/01c_vscode/#features_and_keyboard_shortcuts">previous section</a>. For further details, please refer to that section.</p>
 <p>When writing code sequentially, VS Code automatically provides indentation. You can also format a selected portion of code by pressing  <kbd> Ctrl</kbd> &#43;  <kbd> k</kbd>, followed by  <kbd> f</kbd>. Alternatively, to format the entire script, use the shortcut  <kbd> Alt</kbd> &#43;  <kbd> Shift</kbd> &#43;  <kbd> L</kbd>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Unlike Python, Julia only uses indentation for readability purposes. It doesn&#39;t affect how code should be executed.  </span></span> </p>
 <p>To illustrate how this feature improves readability, consider the following &#40;somewhat exaggerated&#41; example.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
@@ -2886,7 +2886,7 @@ more_calcs         &#61; this_is_a_variable * another_var</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
