--- a/PAGES/02b_variables/index.html
+++ b/PAGES/02b_variables/index.html
@@ -2800,25 +2800,26 @@ color: white;
     <button class="tablink first_tab active" data-id=""> Variables </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">a &#61; 2
-A &#61; 2               # variable &#96;A&#96; is different from &#96;a&#96;
+<pre><code class="language-julia">a         &#61; 2
+A         &#61; 2               # variable &#96;A&#96; is different from &#96;a&#96;
 
-new_value &#61; 2       # underscores allowed
+new_value &#61; 2               # underscores allowed
 
-β &#61; 2               # Greek letters allowed
+β         &#61; 2               # Greek letters allowed
 
-中國 &#61; 2            # Chinese characters allowed   
+中國       &#61; 2               # Chinese characters allowed   
 
-x̄  &#61; 2              # decorations allowed
-x₁ &#61; 2               
+x̄         &#61; 2               # decorations allowed
+x₁        &#61; 2
+ẋ         &#61; 2
 
-🐒 &#61; 2             # emoticons allowed</code></pre>
+🐒        &#61; 2               # emoticons allowed</code></pre>
 <p></div></div> 
  </div></div>
 <p>  </p></details></div>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b>Warning!</b> </span>  </div>  <div class=content>     Unlike other programming languages, <strong>Julia doesn't let you delete variables</strong>. Once a variable is created, it remains in memory until the program terminates. If a variable is taking up too much memory, you can free up space by reassigning it to a smaller object.  </div>  </div>
+      <b>Warning!</b> </span>  </div>  <div class=content> <strong>Julia doesn't let you delete variables</strong>. Once a variable is created, it remains in memory until the program terminates. If a variable is taking up too much memory, you can free up space by reassigning it to a smaller object.  </div>  </div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Notation for Variable Names</strong>  </span>  </div>  <div class=content>     Julia&#39;s developers adopt the convention of using <strong>snake-case</strong> notation for variable names. This relies on lowercase letters and numbers, with words separated by underscores. &#40;e.g., <code>snake_case_var1</code>&#41;. Note that this is only a convention, not a language&#39;s requirement.  </div>  </div>
 <p> <h4> Updating Variables </h4><div class="own-anchors"><a name="update-operator"></a></div></p>
@@ -2933,7 +2934,7 @@ x -&#61; 3        # equivalent</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
