--- a/PAGES/02c_scalars/index.html
+++ b/PAGES/02c_scalars/index.html
@@ -2867,7 +2867,7 @@ z &#61; 0/0</code></pre>
 y &#61; 1
 
 z &#61; &#40;x &gt; y&#41;       # is &#96;x&#96; greater than &#96;y&#96; ?
-z &#61; x &gt; y         # alternative notation &#40;potentially confusing, note it does not imply &#39;z &#61; x&#39;&#41;</code></pre>
+z &#61; x &gt; y         # alternative notation &#40;note it does not imply &#39;z &#61; x&#39;&#41;</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>z</code><br/><div class="akin_to_pre">true</div> </div></div> </div> 
  </div></div>
@@ -2926,7 +2926,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, note
 </tbody>
 </table>
  <br/></p>
-<p>It&#39;s worth noting that all the operators presented above are  <em>binary</em>. Consequently, they follow the syntax <code>x &lt;symbol&gt; y</code>, as indicated in our <a href="/julia_book/PAGES/3a_variables/#operators">discussion</a> about the syntax of operators.</p>
+<p>It&#39;s worth noting that all the operators presented above are  <em>binary</em>. Consequently, they follow the syntax <code>x &lt;symbol&gt; y</code>, as indicated in our <a href="/julia_book/PAGES/02b_variables/#operators">discussion</a> about the syntax of operators.</p>
 <p>      </div>
     </div>
   </div>
@@ -2949,7 +2949,7 @@ z &#61; x &gt; y         # alternative notation &#40;potentially confusing, note
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
