--- a/PAGES/03c_functions/index.html
+++ b/PAGES/03c_functions/index.html
@@ -3161,13 +3161,13 @@ result   &#61; map&#40;x,y&#41; do a,b      # not &#40;a,b&#41;
     </div>
   </div>
 </section>
-<section id="a_functions_documentation_optional" class="scrollspy section-bg-color">
+<section id="a_functions_documentation_i_stylecolorredoptional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>A Function's Documentation (<strong><i>OPTIONAL</i></strong>)</h2></p>
+        <h2>A Function's Documentation (<strong><i style="color:red">OPTIONAL</i></strong>)</h2></p>
 <p>To conclude this section, we cover how to document user-defined functions. This involves adding a string expression immediately before the function definition.</p>
-<p>After this, the documentation can be accessed in the same manner as with built-in functions: you can type the function&#39;s name in the REPL after pressing  <kbd> ?</kbd>, or directly hover over the function&#39;s name in VS Code. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> <a href="/julia_book/PAGES/1c_vscode/#features_and_keyboard_shortcuts">Here</a>, we explained how to access a function&#39;s documentation, under the subtitle &quot;To See The Documentation of a Function&quot;.  </span></span> </p>
+<p>After this, the documentation can be accessed in the same manner as with built-in functions: you can type the function&#39;s name in the REPL after pressing  <kbd> ?</kbd>, or directly hover over the function&#39;s name in VS Code. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> <a href="/julia_book/PAGES/01c_vscode/#features_and_keyboard_shortcuts">Here</a>, we explained how to access a function&#39;s documentation, under the subtitle &quot;To See The Documentation of a Function&quot;.  </span></span> </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3210,7 +3210,7 @@ add_three&#40;a&#41; &#61; a &#43; 3</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
@@ -3830,7 +3830,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#a_functions_documentation_optional" data-offset="-40">A Function's Documentation (<strong><i>OPTIONAL</i></strong>)</a>
+          <a href="#a_functions_documentation_i_stylecolorredoptional" data-offset="-40">A Function's Documentation (<strong><i style="color:red">OPTIONAL</i></strong>)</a>
         </li>
         
       </ul>
