--- a/PAGES/04b_logical/index.html
+++ b/PAGES/04b_logical/index.html
@@ -2777,7 +2777,7 @@ color: white;
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
 <p>This section lays the foundations for defining conditions. These are defined as functions and operators returning true or false as their output. A typical example of condition is <code>x &gt; y</code>.</p>
-<p>For this section, it&#39;ll be worth recalling the classification of operators discussed <a href="/julia_book/PAGES/2a_variables/#operators">here</a>. In general, operators can be categorized into two types: unary and binary. Given a generic operator <code>&lt;operator&gt;</code> and two <code>Bool</code> variables <code>x</code> and <code>y</code>, a <strong>unary operator</strong> takes a single argument and is typically written to the left of its operand, as in <code>&lt;operator&gt;x</code>. In contrast, <strong>binary operator</strong> takes two arguments and is written between them, as in <code>x &lt;operator&gt; y</code>.</p>
+<p>For this section, it&#39;ll be worth recalling the classification of operators discussed <a href="/julia_book/PAGES/02b_variables/#operators">here</a>. In general, operators can be categorized into two types: unary and binary. Given a generic operator <code>&lt;operator&gt;</code> and two <code>Bool</code> variables <code>x</code> and <code>y</code>, a <strong>unary operator</strong> takes a single argument and is typically written to the left of its operand, as in <code>&lt;operator&gt;x</code>. In contrast, <strong>binary operator</strong> takes two arguments and is written between them, as in <code>x &lt;operator&gt; y</code>.</p>
 <p>      </div>
     </div>
   </div>
@@ -2880,13 +2880,21 @@ z &#61; &#91;x &gt; 0, x &lt; 0&#93;</code></pre>
 
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Comparison operators are also available as functions. For instance, the following are all valid:  <div class=" code_box"> <details  open><summary> Operators as Functions  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
+      <b> Remark</b> </span>  </div>  <div class=content>     Comparison operators are also available as functions. For instance, the following are all valid:</p>
+<p> <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
+ <div class="tab_wrapper">
+ <div class="tab_code_links">
+    <button class="tablink first_tab active" data-id=""> Operators as Functions </button>
+</div><div data-id="" class="tabcontent active">
+<div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">&#61;&#61;&#40;1,2&#41;     # same as 1 &#61;&#61; 2
  ≠&#40;1,2&#41;     # same as 1 ≠ 2
  ≥&#40;1,2&#41;     # same as 1 ≥ 2
 &gt;&#61;&#40;1,2&#41;     # same as 1 ≥ 2
  &gt;&#40;1,2&#41;     # same as 1 &gt; 2</code></pre>
-<p></div> </div>  </details></div>  </div>  </div>
+<p></div></div> 
+ </div></div>
+<p>  </p></details></div>  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2938,7 +2946,7 @@ z &#61; &#91;x &gt; 0, x &lt; 0&#93;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> <code>&amp;&amp;</code> and <code>||</code> Operators </button>
+    <button class="tablink first_tab active" data-id=""> && and || Operators </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 2
@@ -2959,7 +2967,7 @@ z2 &#61; &#40;x &gt; 0&#41; || &#40;y &gt; 0&#41;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> <code>&#33;</code> Operator </button>
+    <button class="tablink first_tab active" data-id=""> ! Operator </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 2
@@ -2985,8 +2993,8 @@ y2 &#61; &#33;&#40;x ≤ 0&#41;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> <code>&amp;&amp;</code> </button>
-    <button class="tablink" data-id=""> <code>||</code> </button>    
+    <button class="tablink first_tab active" data-id=""> && </button>
+    <button class="tablink" data-id=""> || </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 10</code></pre>
@@ -3016,8 +3024,8 @@ y2 &#61; &#33;&#40;x ≤ 0&#41;</code></pre>
  <div class="tab_wrapper">
  <div class="tab_code_links">
     <button class="tablink first_tab active" data-id=""> Without Parentheses </button>
-    <button class="tablink" data-id="">  With Parentheses 1</button>
-    <button class="tablink" data-id="">  With Parentheses 2</button>
+    <button class="tablink" data-id="">  With Parentheses</button>
+    <button class="tablink" data-id="">  With Parentheses</button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; 5
@@ -3086,11 +3094,11 @@ y &#61; 0</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Functions <code>all</code> and <code>any</code> </button>
+    <button class="tablink first_tab active" data-id=""> Functions 'all' and 'any' </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">a &#61;  1
-b &#61; -1
+<pre><code class="language-julia">a                &#61; 1
+b                &#61; -1
 
 # function indicating whether all elements satisfy the condition
 are_all_positive &#61; all&#40;&#91;a &gt; 0, b &gt; 0&#93;&#41;
@@ -3107,12 +3115,12 @@ is_one_positive  &#61; any&#40;&#91;a &gt; 0, b &gt; 0&#93;&#41;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Broadcast of <code>all</code> and <code>any</code> </button>
+    <button class="tablink first_tab active" data-id=""> Broadcast of 'all' and 'any' </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
-<pre><code class="language-julia">x &#61; &#91;1, -1&#93;
+<pre><code class="language-julia">x                &#61; &#91;1, -1&#93;
 
-are_all_positive &#61; all&#40;x .&gt; 0&#41; 
+are_all_positive &#61; all&#40;x .&gt; 0&#41;
 is_one_positive  &#61; any&#40;x .&gt; 0&#41;</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>are_all_positive</code><br/><div class="akin_to_pre">false</div> </div></p>
@@ -3124,7 +3132,7 @@ is_one_positive  &#61; any&#40;x .&gt; 0&#41;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Function as Argument of <code>all</code> and <code>any</code> </button>
+    <button class="tablink first_tab active" data-id=""> Function as an Argument of 'all' and 'any' </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x                &#61; &#91;1, -1&#93;
@@ -3140,7 +3148,7 @@ is_one_positive  &#61; any&#40;i -&gt; i &gt; 0, x&#41;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Broadcast + Function as Argument of <code>all</code> and <code>any</code>
+    <button class="tablink first_tab active" data-id=""> Broadcasting 'all' and 'any' </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x                &#61; &#91;1, -1&#93;
@@ -3152,7 +3160,7 @@ is_one_positive  &#61; any.&#40;i -&gt; i &gt; 0, &#91;x,y&#93;&#41;</code></pre
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>are_all_positive</code> # all elements in &#39;y&#39; are positive, but not in &#39;x&#39;<br/><div class="akin_to_pre">2-element BitVector:
  0
  1</div> </div></p>
-<p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>is_one_positive</code> # at least one element of &#39;x&#39; and of &#39;y&#39; is positive<br/><div class="akin_to_pre">2-element BitVector:
+<p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>is_one_positive</code> # at least one element of &#39;x&#39; or &#39;y&#39; is positive<br/><div class="akin_to_pre">2-element BitVector:
  1
  1</div> </div></div> </div> 
  </div></div>
@@ -3179,7 +3187,7 @@ is_one_positive  &#61; any.&#40;i -&gt; i &gt; 0, &#91;x,y&#93;&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
