--- a/PAGES/05b_immutables/index.html
+++ b/PAGES/05b_immutables/index.html
@@ -2820,7 +2820,7 @@ color: white;
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x&#91;1&#93; &#61; &quot;a&quot;</code><br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: MethodError: no method matching setindex!(::String, ::Int64, ::Int64)</div> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The key characteristic of mutable objects is their ability to modify existing elements. Moreover, mutability also commonly allows for the dynamic addition and removal of elements. <a href="/julia_book/PAGES/5c_initializing/#adding_removing_and_replacing_elements_optional">In a subsequent section</a>, we&#39;ll present various methods for implementing this functionality. For now, we simply demonstrate the concept by using the functions <code>push&#33;</code> and <code>pop&#33;</code>, which respectively add and remove an element at the end of a collection.</p>
+<p>The key characteristic of mutable objects is their ability to modify existing elements. Moreover, mutability also commonly allows for the dynamic addition and removal of elements. <a href="/julia_book/PAGES/05d_initializeVector/">In a subsequent section</a>, we&#39;ll present various methods for implementing this functionality. For now, we simply demonstrate the concept by using the functions <code>push&#33;</code> and <code>pop&#33;</code>, which respectively add and remove an element at the end of a collection.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2877,7 +2877,7 @@ pop&#33;&#40;x&#41;           # error, just like push&#33;&#40;x, &lt;some eleme
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
