--- a/PAGES/05c_mutation/index.html
+++ b/PAGES/05c_mutation/index.html
@@ -2954,7 +2954,7 @@ y &#61; &#91;4,5&#93;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Variable <code>y</code> as an Alias </button>    
+    <button class="tablink first_tab active" data-id=""> Variable 'y' as an Alias </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x    &#61; &#91;4,5&#93;
@@ -2974,7 +2974,7 @@ x&#91;1&#93; &#61; 0</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Variable <code>y</code> as a Copy </button>    
+    <button class="tablink first_tab active" data-id=""> Variable 'y' as a Copy </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x    &#61; &#91;4,5&#93;
@@ -3012,7 +3012,7 @@ x&#91;1&#93; &#61; 0</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
