--- a/PAGES/05g_views/index.html
+++ b/PAGES/05g_views/index.html
@@ -2783,7 +2783,7 @@ color: white;
       <b>Warning!</b> </span>  </div>  <div class=content>     Although called &quot;in-place assignments&quot;, <strong>the concept is related to mutations rather than assignments</strong>. The name simply reflects that the technique involves the assignment operator <code>&#61;</code>, which can be used for either purposes.  </div>  </div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Before proceeding, it&#39;s essential that you review the definitions of slices introduced <a href="/julia_book/PAGES/6a_indexing/#slices">in the previous section</a>. Recall that, given a vector <code>x</code>, a <strong>slice</strong> refers to a subset of <code>x</code>&#39;s elements, created through the expression <code>x&#91;&lt;indices&gt;&#93;</code>. Moreover, a slice can act as a <strong>copy</strong> or a <strong>view</strong>. This depends on whether a new object with its own memory address is created or the slice references the original memory address of <code>x</code>.  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     Before proceeding, it&#39;s essential that you review the definitions of slices introduced <a href="/julia_book/PAGES/05e_slices/">in the previous section</a>. Recall that, given a vector <code>x</code>, a <strong>slice</strong> refers to a subset of <code>x</code>&#39;s elements, created through the expression <code>x&#91;&lt;indices&gt;&#93;</code>. Moreover, a slice can act as a <strong>copy</strong> or a <strong>view</strong>. This depends on whether a new object with its own memory address is created or the slice references the original memory address of <code>x</code>.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -3109,7 +3109,7 @@ end</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> Mutation via For-Loop and <code>view</code> </button>    
+    <button class="tablink first_tab active" data-id=""> Mutation via For-Loop and 'view' </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x     &#61; zeros&#40;3&#41;
 slice &#61; view&#40;x, 1:2&#41;
@@ -3145,7 +3145,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
