--- a/PAGES/06b_namedtuples/index.html
+++ b/PAGES/06b_namedtuples/index.html
@@ -2811,7 +2811,7 @@ color: white;
 <p><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>collect&#40;values&#40;x&#41;&#41;</code> <br/> <pre><code class="plaintext code-output">1</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
- <h4> The Type &#39;Pair&#39; </h4>
+ <h4> The Type <code>Pair</code> </h4>
 <p>Collections of key-value pairs in Julia are represented by the type <code>Pair&#123;&lt;key type&gt;, &lt;value type&gt;&#125;</code>. Although we won&#39;t directly work with objects having this type, they form the basis for constructing other collections, in particular dictionaries and named tuples. </p>
 <p><strong>A key-value pair</strong> can be created by using the operator <code>&#61;&gt;</code> as in <code>&lt;key&gt; &#61;&gt; &lt;value&gt;</code>. For instance, <code>&quot;a&quot; &#61;&gt; 1</code> represents a pair, where <code>a</code> is its key and <code>1</code> its corresponding value. In addition, we can create pairs through the function <code>Pair&#40;&lt;key&gt;, &lt;value&gt;&#41;</code>, making <code>Pair&#40;&quot;a&quot;,1&#41;</code> equivalent to the previous example. Finally, given a pair <code>x</code>, its key can be accessed by either <code>x&#91;1&#93;</code> or <code>x.first</code>, while its value can be retrieved using <code>x&#91;2&#93;</code> or <code>x.second</code>. All this is demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
@@ -2835,7 +2835,7 @@ some_pair &#61; Pair&#40;&quot;a&quot;, 1&#41;    # equivalent</code></pre> </di
 <p><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>some_pair.second</code> <br/> <pre><code class="plaintext code-output">1</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
- <h4> The Type &#39;Symbol&#39; </h4>
+ <h4> The Type <code>Symbol</code> </h4>
 <p>The type used to represent keys can vary depending on the collection. One important type used as key is <code>Symbol</code>, which provides an efficient way to represent string-based keys. A symbol with name <code>x</code> is denoted <code>:x</code>, and can be created from strings using the function <code>Symbol&#40;&lt;some string&gt;&#41;</code>.  <span class="footn supr">&#91;note&#93;  <span class="footn_text"> This type also enables programmatic creation of variables. For example, it can be employed for creating new columns in the package <code>DataFrames</code>. This package provides a table representation of data, and is standard for data analysis.  </span></span> </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -3493,7 +3493,7 @@ end
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
