--- a/PAGES/06d_functionsVectors/index.html
+++ b/PAGES/06d_functionsVectors/index.html
@@ -3250,8 +3250,8 @@ y &#61; ordinalrank&#40;x, rev&#61;true&#41;</code></pre> </div></div>
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px; padding-right:0.4em;"><strong>Do not confuse <code>ordinalrank</code> and <code>sortperm</code></strong>  </span>  </div>  <div class=content>     The function <code>ordinalrank</code> indicates the position of each value in the  <em>sorted</em> vector, while <code>sortperm</code> indicates the position of each value in the  <em>unsorted</em> vector.  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> <code>ordinalrank</code> </button>
-    <button class="tablink" data-id=""> <code>sortperm</code>  </button>    
+    <button class="tablink first_tab active" data-id=""> 'ordinalrank' </button>
+    <button class="tablink" data-id=""> 'sortperm'  </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">using StatsBase
 x &#61; &#91;3, 1, 2&#93;
@@ -3306,10 +3306,18 @@ y &#61; findmax&#40;x&#41;</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
 <p>Julia additionally provides the function <code>max</code> and <code>min</code>, which respectively return the maximum and minimum of its arguments. These functions are particularly useful when applied in binary operations.</p>
- <div class=" code_box"> <details  open><summary> Max Function  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; 3
+ <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
+ <div class="tab_wrapper">
+ <div class="tab_code_links">
+    <button class="tablink first_tab active" data-id=""> 'max' Function</button>
+</div><div data-id="" class="tabcontent active">
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; 3
 y &#61; 4
 
-z &#61; max&#40;x,y&#41;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>z</code> <br/> <pre><code class="plaintext code-output">4</code></pre> </div></div> </div>   </details></div>
+z &#61; max&#40;x,y&#41;</code></pre> </div></div> 
+<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>z</code> <br/> <pre><code class="plaintext code-output">4</code></pre> </div></div> </div> 
+ </div></div>
+<p>  </p></details></div>
 <p>      </div>
     </div>
   </div>
@@ -3332,7 +3340,7 @@ z &#61; max&#40;x,y&#41;</code></pre> </div> </div> <div class="output_in_modal"
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
