--- a/PAGES/07c_benchmarks/index.html
+++ b/PAGES/07c_benchmarks/index.html
@@ -2905,8 +2905,8 @@ color: white;
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> <code>@btime</code> </button>    
-    <button class="tablink" data-id=""> <code>@benchmark</code> </button>
+    <button class="tablink first_tab active" data-id=""> @btime </button>    
+    <button class="tablink" data-id=""> @benchmark </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">using BenchmarkTools
 
@@ -2930,8 +2930,8 @@ x &#61; 1:100
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> No <code>&#36;</code> </button>
-    <button class="tablink" data-id=""> With <code>&#36;</code> </button>    
+    <button class="tablink first_tab active" data-id=""> No '$' </button>
+    <button class="tablink" data-id=""> With '$' </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">using BenchmarkTools
 x &#61; rand&#40;100&#41;
@@ -2961,8 +2961,8 @@ x &#61; rand&#40;100&#41;
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-    <button class="tablink first_tab active" data-id=""> <code>@b</code> </button>
-    <button class="tablink" data-id=""> <code>@be</code> </button>    
+    <button class="tablink first_tab active" data-id=""> @b </button>
+    <button class="tablink" data-id=""> @be </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">using Chairmarks
 x &#61; rand&#40;100&#41;
@@ -3129,7 +3129,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
