--- a/PAGES/09e_preallocations/index.html
+++ b/PAGES/09e_preallocations/index.html
@@ -2924,7 +2924,7 @@ setTimeout(() => {
 <p>The presentation begins by reviewing methods to initialize vectors, which constitutes a prerequisite for pre-allocation. We then present two scenarios where pre-allocation proves advantageous. In particular, one of them highlights the benefits of pre-allocating in the context of nested for-loops.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     The review of vector initialization will be relatively brief and focused on performance. For more details, I recommend reviewing the <a href="/julia_book/PAGES/5c_initializing/">section about vector creation</a>, as well as the sections on <a href="/julia_book/PAGES/5f_mutating_views/">in-place assigments</a> and <a href="/julia_book/PAGES/5g_inplace/">in-place functions</a>.  </div>  </div>
+      <b> Remark</b> </span>  </div>  <div class=content>     The review of vector initialization will be relatively brief and focused on performance. For more details, I recommend reviewing the <a href="/julia_book/PAGES/05d_initializeVector/">section about vector creation</a>, as well as the sections on <a href="/julia_book/PAGES/05g_views/">in-place assignments</a> and <a href="/julia_book/PAGES/05h_inplace/">in-place functions</a>.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -3431,7 +3431,7 @@ calling_foo_in_a_loop&#40;x, output, temp&#41; &#61; &#91;foo&#33;&#40;x, output
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
