--- a/PAGES/11a_overview/index.html
+++ b/PAGES/11a_overview/index.html
@@ -2794,10 +2794,11 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>Programming languages typically execute code sequentially, following a single path of execution that can only utilize one core at a time. This linear approach simplifies reasoning about program behavior, as each operation completes before the next begins. However, modern hardware often includes multiple processor cores. This implies that relying solely on sequential execution leaves much of this computational power untapped, where only one core is doing all the work while the others sit idle.</p>
-<p>Multithreading addresses this limitation by running different parts of our program simultaneously across multiple cores. While this capability opens up possibilities for substantial performance improvements, it also introduces new challenges that developers need to navigate carefully. For instance, operations that worked perfectly in single-threaded programs might produce incorrect results or unexpected errors. Furthermore, writing multithreaded code requires us to think differently about how our program executes. Thus, multithreaded code is inherently more difficult to write, test, and debug than its single-threaded counterpart. </p>
-<p>Despite these challenges, the potential performance benefits of multithreading make it an essential tool in modern programming. This is particularly true for applications that need to process large amounts of data efficiently.</p>
+<p>Programming languages typically execute code sequentially, following a single path of execution that utilizes one core at a time. This linear approach simplifies reasoning about program behavior, as each operation completes before the next begins. However, hardware these days is commonly equipped with multiple processor cores. Consequently, a sequential execution makes one core all the work, while the others sit idle. This leaves substantial computational power untapped.</p>
+<p>Multithreading addresses this limitation by running different segments of our program simultaneously across multiple cores. While this capability opens up significant opportunities for performance improvement, it also introduces new challenges that developers need to navigate carefully. In fact, simple operations that work flawlessly in single-threaded programs may yield incorrect results in a multithreaded setting. Furthermore, writing multithreaded code requires a fundamental shift in the user&#39;s mindset regarding program execution. All this makes multithreaded code be inherently more difficult to write, test, and debug than its single-threaded counterpart. </p>
+<p>Despite these challenges, the potential performance benefits of multithreading make it an essential tool in modern programming. This is particularly true for applications that are computationally intensive or demand applying the same code to multiple objects.</p>
  <div style="visibility: hidden;margin-bottom:-4em">
+this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
@@ -2828,7 +2829,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
