--- a/PAGES/11g_multithread_packages/index.html
+++ b/PAGES/11g_multithread_packages/index.html
@@ -3434,8 +3434,8 @@ foo&#40;x&#41; &#61; @tturbo log.&#40;x&#41; ./ x</code></pre> </div></div>
  <div class=warning>  <div class=title>  <span class="warning_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/warning.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b>Warning!</b> </span>  </div>  <div class=content>     All the code snippets below assume you&#39;ve loaded the package by executing <code>using FLoops</code>.  </div>  </div>
-<p>We close this section by briefly covering the package <code>FLoops</code>. Its coverage is labeled as optional since its use beyond simple applications could require <a href="https://juliafolds.github.io/FLoops.jl/stable/howto/avoid-box/">some workarounds</a>. Moreover, it seems to be lacking maintenaince.</p>
-<p>The main macro provided is <code>@floop</code>, designed to parallelize for-loops. An example of its usage is provided below.</p>
+<p>We conclude this section with a brief overview of the package <code>FLoops</code>. The presentation is labeled as optional since its use beyond simple applications could require <a href="https://juliafolds.github.io/FLoops.jl/stable/howto/avoid-box/">some workarounds</a>. Moreover, it appears not to be actively maintained. </p>
+<p>The primary macro provided by the package is <code>@floop</code>, exclusively designed to parallelize for-loops. An example of its usage is provided below.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3547,7 +3547,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
