--- a/PAGES/02d_strings/index.html
+++ b/PAGES/02d_strings/index.html
@@ -2861,7 +2861,7 @@ x &#61; &quot;&quot;&quot;Hello, beautiful world&quot;&quot;&quot;</code></pre>
 <pre><code class="language-julia">number_students &#61; 10
 
 
-x &#61; &quot;There are &#36;&#40;number_students&#41; students in the course&quot;</code></pre>
+output_text     &#61; &quot;There are &#36;&#40;number_students&#41; students in the course&quot;</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">"There are 10 students in the course"</div> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
@@ -2869,7 +2869,7 @@ x &#61; &quot;There are &#36;&#40;number_students&#41; students in the course&qu
 <pre><code class="language-julia">number_matches  &#61; 50
 goals_per_match &#61; 2
 
-x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match&#41; goals&quot;</code></pre>
+output_text     &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match&#41; goals&quot;</code></pre>
 <p></div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">"Last year, Messi scored 100 goals"</div> </div></div> </div> 
  </div></div>
@@ -2896,7 +2896,7 @@ x &#61; &quot;Last year, Messi scored &#36;&#40;number_matches * goals_per_match
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
