--- a/PAGES/06c_pipes/index.html
+++ b/PAGES/06c_pipes/index.html
@@ -2800,21 +2800,21 @@ color: white;
     <button class="tablink" data-id=""> With Let Block </button>    
     <button class="tablink" data-id=""> With Let Block (Equivalent)</button>    
 </div><div data-id="" class="tabcontent active">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 output &#61; round&#40;log&#40;abs&#40;a&#41;&#41;&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div></p>
-<div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>temp1</code> <br/> <pre><code class="plaintext code-output">2</code></pre> </div>
+<div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>temp1</code> <br/>  </div>
 <p><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>temp2</code> <br/> <pre><code class="plaintext code-output">4</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 temp1  &#61; abs&#40;a&#41;
 temp2  &#61; log&#40;temp1&#41;
 output &#61; round&#40;temp2&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 output &#61; let b &#61; a         # &#39;b&#39; is a local variable having the value of &#39;a&#39; 
    temp1 &#61; abs&#40;b&#41;
@@ -2825,7 +2825,7 @@ end</code></pre> </div></div>
 <div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>temp1</code> #local to let-block<br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: UndefVarError: `temp1` not defined</div> </div>
 <p><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>temp2</code> #local to let-block<br/><div class="akin_to_pre"><span style="color: rgb(168, 50, 50); padding-left:-1px"><strong>ERROR</strong></span>: UndefVarError: `temp2` not defined</div> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 output &#61; let a &#61; a         # the &#39;a&#39; on the left of &#96;&#61;&#96; defines a local variable
    temp1 &#61; abs&#40;a&#41;
@@ -2884,12 +2884,12 @@ end</code></pre> </div></div>
     <button class="tablink first_tab active" data-id=""> Operation </button>    
     <button class="tablink" data-id=""> With Pipes </button>    
 </div><div data-id="" class="tabcontent active">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 output &#61; round&#40;log&#40;abs&#40;a&#41;&#41;&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 output &#61; a |&gt; abs |&gt; log |&gt; round</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.0</code></pre> </div></div> </div> 
@@ -2902,8 +2902,7 @@ output &#61; a |&gt; abs |&gt; log |&gt; round</code></pre> </div></div>
  <div class="tab_code_links">
     <button class="tablink first_tab active" data-id=""> In One Line </button>
     <button class="tablink" data-id=""> In Multiple Lines </button>
-    <button class="tablink" data-id=""> Built-In Pipes </button>
-    <button class="tablink" data-id=""> Package Pipe </button>
+    <button class="tablink" data-id=""> Pipe </button>    
     <button class="tablink" data-id=""> Let Block </button>
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">variable_with_a_long_name &#61; 2
@@ -2919,14 +2918,8 @@ output &#61; temp - log&#40;temp&#41; / abs&#40;temp&#41;</code></pre> </div></d
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">variable_with_a_long_name &#61; 2
 
-output &#61; variable_with_a_long_name       |&gt;
+output &#61; variable_with_a_long_name  |&gt;
          a -&gt; a - log&#40;a&#41; / abs&#40;a&#41;</code></pre> </div></div> 
-<div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.6534264097200273</code></pre> </div></div> </div> 
- </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">variable_with_a_long_name &#61; 2 ; using Pipe
-
-output &#61; @pipe variable_with_a_long_name |&gt;
-               _ - log&#40;_&#41; / abs&#40;_&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.6534264097200273</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">variable_with_a_long_name &#61; 2
@@ -2947,19 +2940,19 @@ end</code></pre> </div></div>
     <button class="tablink" data-id=""> In Multiple Lines </button>
     <button class="tablink" data-id=""> Broadcasting Pipes </button>    
 </div><div data-id="" class="tabcontent active">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;-1,2,3&#93;
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x      &#61; &#91;-1,2,3&#93;
 
 output &#61; sum&#40;log.&#40;abs.&#40;x&#41;&#41;&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.791759469228055</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;-1,2,3&#93;
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x      &#61; &#91;-1,2,3&#93;
 
 temp1  &#61; abs.&#40;x&#41;
 temp2  &#61; log.&#40;temp1&#41;
 output &#61; sum&#40;temp2&#41;</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.791759469228055</code></pre> </div></div> </div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x &#61; &#91;-1,2,3&#93;
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">x      &#61; &#91;-1,2,3&#93;
 
 output &#61; x .|&gt; abs .|&gt; log |&gt; sum</code></pre> </div></div> 
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>output</code> <br/> <pre><code class="plaintext code-output">1.791759469228055</code></pre> </div></div> </div> 
@@ -2975,17 +2968,17 @@ output &#61; x .|&gt; abs .|&gt; log |&gt; sum</code></pre> </div></div>
     <button class="tablink" data-id=""> In Multiple Lines </button>
     <button class="tablink" data-id=""> With Pipes </button>    
 </div><div data-id="" class="tabcontent active">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 output &#61; round&#40;2 * abs&#40;a&#41;&#41;</code></pre> </div></div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 temp1  &#61; abs&#40;a&#41;
 temp2  &#61; 2 * temp1
 output &#61; round&#40;temp2&#41;</code></pre> </div></div> 
  </div><div data-id="" class="tabcontent">
-<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a &#61; -2
+<div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">a      &#61; -2
 
 output &#61; a |&gt; abs |&gt; &#40;x -&gt; 2 * x&#41; |&gt; round
 
@@ -3007,7 +3000,7 @@ output &#61; a              |&gt;
     <button class="tablink" data-id=""> With Package Pipe </button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">#
-a &#61; -2
+a      &#61; -2
 
 output &#61; a |&gt; abs |&gt; &#40;x -&gt; 2 * x&#41; |&gt; round
 
@@ -3153,7 +3146,7 @@ output       &#61; &#91;foo&#40;a&#41; for foo in compositions&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
