--- a/PAGES/08c_TS-scalarsVectors/index.html
+++ b/PAGES/08c_TS-scalarsVectors/index.html
@@ -2861,7 +2861,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Type Stability with Scalars</h2></p>
-<p>To turn the definition of type stability for scalars operational, let&#39;s revisit some concepts about types. Recall that only concrete types like <code>Int64</code> or <code>Float64</code> can be <a href="/julia_book/PAGES/7c_TS-onTypes/#instantiate">instantiated</a>, while abstract types like <code>Any</code> or <code>Number</code> can&#39;t.</p>
+<p>To turn the definition of type stability for scalars operational, let&#39;s revisit some concepts about types. Recall that only concrete types like <code>Int64</code> or <code>Float64</code> can be <a href="/julia_book/PAGES/07d_TS-onTypes/#sub_only_concrete_types_can_be_instantiated_abstract_types_cant">instantiated</a>, while abstract types like <code>Any</code> or <code>Number</code> can&#39;t.</p>
 <p>Instantiation simply means that all values ultimately adopt a unique concrete type. For instance, a variable <code>x::Number &#61; 2</code> shouldn&#39;t be interpreted as <code>x</code> having the type <code>Number</code>. Instead, it means that <code>x</code> can only be reassigned to values whose concrete type is a subtype of <code>Number</code>. Ultimately, <code>x</code> must have a concrete type, which in this case is <code>Int64</code>.</p>
 <p>In this context, type instability may arise when operations mix <code>Int64</code> and <code>Float64</code>, although this isn&#39;t always the case. To illustrate this, we&#39;ll start showing some scenarios where mixing these types doesn&#39;t cause issues.</p>
  <h4> Type Promotion and Conversion </h4>
@@ -3070,7 +3070,7 @@ sum&#40;x6&#41;             # type UNSTABLE -&gt; &#96;sum&#96; must consider al
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
