--- a/PAGES/09f_reductions/index.html
+++ b/PAGES/09f_reductions/index.html
@@ -2849,7 +2849,7 @@ end</code></pre> </div></div>
 <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>foo&#40;x&#41;</code> <br/> <pre><code class="plaintext code-output">48.447</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>In reductions, it&#39;s common to see implementations like the last tab, which are based on <a href="/julia_book/PAGES/2a_variables/#update-operator">update operators</a>. This entails that an expression like <code>x &#43;&#61; a</code> is equivalent to <code>x &#61; x &#43; a</code>. </p>
+<p>In reductions, it&#39;s common to see implementations like the last tab, which are based on <a href="/julia_book/PAGES/02b_variables/#sub_updating_variables">update operators</a>. This entails that an expression like <code>x &#43;&#61; a</code> is equivalent to <code>x &#61; x &#43; a</code>. </p>
 <p>      </div>
     </div>
   </div>
@@ -2859,7 +2859,7 @@ end</code></pre> </div></div>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Implementing Reductions</h2></p>
-<p>Reductions are implemented by applying either a <a href="/julia_book/PAGES/2a_variables/#operators">binary operator</a> or a two-argument function during each iteration. An example of a binary operator is <code>&#43;</code>, as we used above. However, we could have also used <code>&#43;</code> as a two-argument function, replacing <code>output &#61; output &#43; x&#91;i&#93;</code> with <code>output &#61; &#43;&#40;output, x&#91;i&#93;&#41;</code>. The possibility of using functions broadens the scope of reductions. For instance, it allows us to compute the maximum value of a vector <code>x</code> by the function <code>max</code>, where <code>max&#40;a,b&#41;</code> returns the maximum of the scalars <code>a</code> and <code>b</code>.</p>
+<p>Reductions are implemented by applying either a <a href="/julia_book/PAGES/02b_variables/#operators">binary operator</a> or a two-argument function during each iteration. An example of a binary operator is <code>&#43;</code>, as we used above. However, we could have also used <code>&#43;</code> as a two-argument function, replacing <code>output &#61; output &#43; x&#91;i&#93;</code> with <code>output &#61; &#43;&#40;output, x&#91;i&#93;&#41;</code>. The possibility of using functions broadens the scope of reductions. For instance, it allows us to compute the maximum value of a vector <code>x</code> by the function <code>max</code>, where <code>max&#40;a,b&#41;</code> returns the maximum of the scalars <code>a</code> and <code>b</code>.</p>
 <p>Formally, a reduction requires the binary operation to satisfy <strong>two mathematical requirements</strong>:</p>
 <ul>
 <li><p><strong>Associativity</strong>: the way in which operations are grouped does not change the result. For example, addition is associative because <code>&#40;a &#43; b&#41; &#43; c &#61; a &#43; &#40;b &#43; c&#41;</code>.</p>
@@ -2984,7 +2984,7 @@ end</code></pre> </div></div>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Avoiding Memory Allocations through Reductions</h2></p>
-<p>One of the primary advantages of reductions is that they avoid the memory allocation of intermediate results. To illustrate this, consider the operation <code>sum&#40;log.&#40;x&#41;&#41;</code> for a vector <code>x</code>. This operation involves transforming <code>x</code> into <code>log.&#40;x&#41;</code> and then summing the transformed elements. By default, broadcasting creates a new vector to store the result of <code>log.&#40;x&#41;</code>, thereby allocating memory for it. However, we&#39;re only interested in the final sum and not the intermediate result itself. Therefore, an approach that bypasses the allocation of <code>log.&#40;x&#41;</code> is beneficial. Reductions accomplish this by defining a scalar <code>output</code>, which is iteratively updated by summing the transformed values of <code>x</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> In the section <a href="/julia_book/PAGES/9g_lazy/">Lazy Operations</a>, we&#39;ll explore an alternative with broadcasting that doesn&#39;t materialize intermediate results either.  </span></span> </p>
+<p>One of the primary advantages of reductions is that they avoid the memory allocation of intermediate results. To illustrate this, consider the operation <code>sum&#40;log.&#40;x&#41;&#41;</code> for a vector <code>x</code>. This operation involves transforming <code>x</code> into <code>log.&#40;x&#41;</code> and then summing the transformed elements. By default, broadcasting creates a new vector to store the result of <code>log.&#40;x&#41;</code>, thereby allocating memory for it. However, we&#39;re only interested in the final sum and not the intermediate result itself. Therefore, an approach that bypasses the allocation of <code>log.&#40;x&#41;</code> is beneficial. Reductions accomplish this by defining a scalar <code>output</code>, which is iteratively updated by summing the transformed values of <code>x</code>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> In the section <a href="/julia_book/PAGES/09i_lazyBroadcasting/">Lazy Operations</a>, we&#39;ll explore an alternative with broadcasting that doesn&#39;t materialize intermediate results either.  </span></span> </p>
 <p> <div class="own-anchors"><a name="example_previous2"></a></div>  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3226,7 +3226,7 @@ foo&#40;x&#41; &#61; reduce&#40;min, x&#41;         #same output as minimum&#40;
 <p>  </p></details></div>
 <p>Note that all the examples provided could&#39;ve been implemented as <a href="#example_previous">we did previously</a>, where we directly applied <code>sum</code>, <code>prod</code>, <code>maximum</code> and <code>minimum</code>. </p>
  <h4> Mapreduce </h4>
-<p>The function <code>mapreduce</code> combines the functions <code>map</code> and <code>reduce</code>: before applying the reduction, <code>mapreduce</code> transforms vectors <a href="/julia_book/PAGES/3d_vectorizing/#the_map_function">via the function <code>map</code></a>. Recall that <code>map&#40;foo,x&#41;</code> transforms each element of the collection <code>x</code> by applying <code>foo</code> element-wise. Thus, <code>mapreduce&#40;&lt;transformation&gt;,&lt;reduction&gt;,x&#41;</code> first transforms <code>x</code>&#39;s elements through <code>map</code>, and then applies a reduction to the resulting output. </p>
+<p>The function <code>mapreduce</code> combines the functions <code>map</code> and <code>reduce</code>: before applying the reduction, <code>mapreduce</code> transforms vectors <a href="/julia_book/PAGES/03e_vectorizing/#the_map_function">via the function <code>map</code></a>. Recall that <code>map&#40;foo,x&#41;</code> transforms each element of the collection <code>x</code> by applying <code>foo</code> element-wise. Thus, <code>mapreduce&#40;&lt;transformation&gt;,&lt;reduction&gt;,x&#41;</code> first transforms <code>x</code>&#39;s elements through <code>map</code>, and then applies a reduction to the resulting output. </p>
 <p>To illustrate its use, we make use of a <code>log</code> transformation. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -3339,7 +3339,7 @@ foo&#40;x&#41; &#61; reduce&#40;&#43;, map&#40;a -&gt; 2 * a, x&#41;&#41;</code>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
