--- a/PAGES/09g_staticVectors/index.html
+++ b/PAGES/09g_staticVectors/index.html
@@ -2849,7 +2849,7 @@ sx &#61; @SVector &#91;a for a in x&#93;</code></pre> </div></div>
  10</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Of these approaches, we&#39;ll primarily rely on the function <code>SVector</code>, occasionally employing <code>SA</code> for indexing purposes. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The approach based on the macro <code>@SVector</code> requires some caveats. For instance, it doesn&#39;t support definitions based on local variables, thus precluding the use of <code>eachindex&#40;x&#41;</code> in the array comprehension, unless <code>x</code> is a global variable.  </span></span> Note the use of the <a href="/julia_book/PAGES/3b_define_func/#splatting">splatting operator</a> <code>...</code> to turn a regular vector into an SVector. This operator is necessary for the function <code>SVector</code> to transform a collection into a sequence of arguments. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, <code>foo&#40;x...&#41;</code> is equivalent to <code>foo&#40;x&#91;1&#93;, x&#91;2&#93;, x&#91;3&#93;&#41;</code> given a vector or tuple <code>x</code> with 3 elements.  </span></span></p>
+<p>Of these approaches, we&#39;ll primarily rely on the function <code>SVector</code>, occasionally employing <code>SA</code> for indexing purposes. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The approach based on the macro <code>@SVector</code> requires some caveats. For instance, it doesn&#39;t support definitions based on local variables, thus precluding the use of <code>eachindex&#40;x&#41;</code> in the array comprehension, unless <code>x</code> is a global variable.  </span></span> Note the use of the <a href="/julia_book/PAGES/03c_functions/#sub_splatting">splatting operator</a> <code>...</code> to turn a regular vector into an SVector. This operator is necessary for the function <code>SVector</code> to transform a collection into a sequence of arguments. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> For instance, <code>foo&#40;x...&#41;</code> is equivalent to <code>foo&#40;x&#91;1&#93;, x&#91;2&#93;, x&#91;3&#93;&#41;</code> given a vector or tuple <code>x</code> with 3 elements.  </span></span></p>
 <p>Regarding slices of SVectors, the approach used for their creation could result in either a regular vector or an SVector. This depends on the indexing employed: a slice remains an SVector when indices are given as SVectors, whereas the slice becomes a regular vector for indices provided by ranges or regular vectors. The sole exception to this rule is when the slice references the whole object &#40;i.e., <code>sx&#91;:&#93;</code>&#41;, in which case an SVector is returned.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -3036,7 +3036,7 @@ mx &#61; similar&#40;sx&#41;        # it defines an MVector with undef elements<
       <div class="col-lg- mx-auto">
         <h2>Type Stability: Size is Part of the Static Vectors' Type</h2></p>
 <p>SVectors are formally defined as objects with type <code>SVector&#123;N,T&#125;</code>, where <code>N</code> specifies the number of elements and <code>T</code> denotes the element&#39;s type. For instance, <code>SVector&#40;4,5,6&#41;</code> has type <code>SVector&#123;3,Int64&#125;</code>, indicating that it comprises 3 elements with type <code>Int64</code>. Importantly, this implies that <strong>the number of elements is part of the</strong> <code>SVector</code> <strong>type</strong>. This feature, which is shared with MVectors and inherited from tuples, can readily introduce type instabilities if not handled carefully.</p>
-<p>The approaches to ensuring type stability are <a href="PAGES/8e_TS-tuples/">similar to those employed for tuples</a>. This means that we should either pass SVectors and MVectors as function arguments, or dispatch by the number of elements through the <code>Val</code>technique.</p>
+<p>The approaches to ensuring type stability are <a href="PAGES/08f_TS-tuples/">similar to those employed for tuples</a>. This means that we should either pass SVectors and MVectors as function arguments, or dispatch by the number of elements through the <code>Val</code>technique.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3243,7 +3243,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified February 25, 2025 
+          © Martin Alfaro <br>Last Modified February 26, 2025 
       </span> 
   </div> 
 </footer>
